refactor: rebuild central content pipeline from main